objects/HealthCloudGA__ContactContactRelation__c/HealthCloudGA__ContactContactRelation__c.object-meta.xml
<CustomObject>
    <description>A relationship between any two individuals.</description>
    <label>Contact-Contact Relationship</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Contact Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Contact Relations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>