objects/HealthCloudGA__ContactContactRelation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Contacts</relationshipLabel>
    <relationshipName>Associated_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>