objects/HealthCloudGA__ContactContactRelation__c/fields/CaregiverName__c.field-meta.xml
<CustomField>
    <fullName>CaregiverName__c</fullName>
    <formula>IF(ISBLANK(TEXT(HealthCloudGA__Contact__r.SitePersona__c)), HealthCloudGA__Contact__r.FirstName + &#39; &#39; +  HealthCloudGA__Contact__r.LastName , &#39;&#39;)</formula>
    <label>CaregiverName</label>
    <type>Text</type>
</CustomField>