objects/HealthCloudGA__ContactContactRelation__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>HealthCloudGA__Contact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>