objects/HealthCloudGA__ContactContactRelation__c/fields/IsVisibleOnPatientCard__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleOnPatientCard__c</fullName>
    <description>The field is being referenced in Patient Cared configuration record named Caregiver.</description>
    <formula>NOT(ISBLANK(HealthCloudGA__Contact__r.LastName))</formula>
    <label>IsVisibleOnPatientCard</label>
    <type>Checkbox</type>
</CustomField>