objects/HealthCloudGA__ContactContactRelation__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>HealthCloudGA__Contact__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>